objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Designated_DSM_EMail__c</fullName>
        <label>Account Designated DSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.Account_Number__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Client_Designated_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Client Designated Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advertising__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advertising</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associates_Last_Date_Time__c</fullName>
        <inlineHelpText>Date/Time should be in Central Standard Time</inlineHelpText>
        <label>Associates Last Date Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associates_Last_Termination_Date_Time__c</fullName>
        <label>Associates Last Worked Date Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Contract_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authorized Contract Signer  for Legal</description>
        <inlineHelpText>Check if contact can sign both e-store and regular contacts for account</inlineHelpText>
        <label>Authorized Contract Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Signer_e_Store_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if contact can sign only e-store orders only</inlineHelpText>
        <label>Authorized Signer e-Store Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Site</label>
        <referenceTo>Business_Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSIOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSIOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSI_Last_Filled_Out_Date__c</fullName>
        <label>CSI Last Filled Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <formula>Account.Designated_DSM__r.FirstName &amp; &quot; &quot; &amp; Account.Designated_DSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_SLS_Required_cc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required cc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <description>Do not put on a page layout. This we just intend to use this for Case Contact field validation.</description>
        <formula>Account.Dealer_Group_Name2__c</formula>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>BDC / Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodyshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office / Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Wide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Solicit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Economic Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_AccountID__c</fullName>
        <label>External AccountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_SystemID__c</fullName>
        <label>External SystemID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY16_US_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>April 2016 all policy acknowledgements move to Successfactors</description>
        <inlineHelpText>FY16 US Acknowledgement Group - for reporting</inlineHelpText>
        <label>FY16 US Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <formula>Today()- Most_Recent_CSI_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName  &amp; &quot; &quot; &amp; LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Member__c</fullName>
        <label>Group Member</label>
        <picklist>
            <picklistValues>
                <fullName>LDP Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Advisory Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Business_Unit__c</fullName>
        <inlineHelpText>Populated via HR DB feed</inlineHelpText>
        <label>HR Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Hire_Date__c</fullName>
        <label>HR Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Last_Date_Worked__c</fullName>
        <inlineHelpText>Populated by HR data feed.</inlineHelpText>
        <label>HR Last Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Location__c</fullName>
        <inlineHelpText>Populated via HR DB feed</inlineHelpText>
        <label>HR Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated via HR DB feed</inlineHelpText>
        <label>HR Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact Manager should be another contact from CDK Global</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>CDK Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Rehire_Date__c</fullName>
        <label>HR Rehire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Status__c</fullName>
        <inlineHelpText>Populated via HR DB feed

A - Active
D - Dead
L - Leave
R - Retired
S - Severed
T - Termed</inlineHelpText>
        <label>HR Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Term_Date__c</fullName>
        <inlineHelpText>Populated by HR data feed.</inlineHelpText>
        <label>HR Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Title__c</fullName>
        <inlineHelpText>Populated via HR DB feed</inlineHelpText>
        <label>HR Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDP_Brand__c</fullName>
        <label>LDP Brand</label>
        <picklist>
            <controllingField>LDP__c</controllingField>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porsche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subaru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LDP_Level__c</fullName>
        <label>LDP Level</label>
        <picklist>
            <controllingField>Group_Member__c</controllingField>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDP_Reason_Code__c</fullName>
        <label>LDP Reason Code</label>
        <picklist>
            <controllingField>LDP__c</controllingField>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMA_Divison__c</fullName>
        <label>LMA Division</label>
        <picklist>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <label>Language Preference</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manual_Policy_Addition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FY15 Catch-up Policy Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_CSI_Sent_Date1__c</fullName>
        <label>Most Recent CSI Sent Date_TEXT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_CSI_Sent_Date__c</fullName>
        <label>Most Recent CSI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Longer_There__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate this Contact has left this Account by checking this field.</inlineHelpText>
        <label>No Longer There</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <formula>IF(INCLUDES( Account.OEM__c  , &quot;Acura&quot;), &quot;Acura&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Audi&quot;), &quot;Audi&quot;,
IF(INCLUDES(Account.OEM__c , &quot;BMW&quot;), &quot;BMW&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Chrysler&quot;), &quot;Chrysler&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Daewoo&quot;), &quot;Daewoo&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Daihatsu&quot;), &quot;Daihatsu&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Dodge&quot;), &quot;Dodge&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Drawee&quot;), &quot;Drawee&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Ferrari&quot;), &quot;Ferrari&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Fiat&quot;), &quot;Fiat&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Ford&quot;), &quot;Ford&quot;,
IF(INCLUDES(Account.OEM__c , &quot;GM&quot;), &quot;GM&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Holden&quot;), &quot;Holden&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Honda&quot;), &quot;Honda&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Infiniti&quot;), &quot;Infiniti&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Jaguar&quot;), &quot;Jaguar&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Jeep&quot;), &quot;Jeep&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Kia&quot;), &quot;Kia&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Lamborghini&quot;), &quot;Lamborghini&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Land Rover&quot;), &quot;Land Rover&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Lexus&quot;), &quot;Lexus&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Lincoln&quot;), &quot;Lincoln&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Maserati&quot;), &quot;Maserati&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Mazda&quot;), &quot;Mazda&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Mercedes-Benz&quot;), &quot;Mercedes-Benz&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Mercury&quot;), &quot;Mercury&quot;,
IF(INCLUDES(Account.OEM__c , &quot;MINI&quot;), &quot;MINI&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Mitsubishi&quot;), &quot;Mitsubishi&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Peugeot&quot;), &quot;Peugeot&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Plymouth&quot;), &quot;Plymouth&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Pontiac&quot;), &quot;Pontiac&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Porsche&quot;), &quot;Porsche&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Renault&quot;), &quot;Renault&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Rolls Royce&quot;), &quot;Rolls Royce&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Saab&quot;), &quot;Saab&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Scion&quot;), &quot;Scion&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Seat&quot;), &quot;Seat&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Subaru&quot;), &quot;Subaru&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Suzuki&quot;), &quot;Suzuki&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Toyota&quot;), &quot;Toyota&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Volkswagen&quot;), &quot;Volkswagen&quot;,
IF(INCLUDES(Account.OEM__c , &quot;Volvo&quot;), &quot;Volvo&quot;
, NULL
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
        <label>OEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_Contact_ID__c</fullName>
        <label>OS Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <inlineHelpText>When does this person prefer to be contacted? (I.e. Thurs- Sun days only, Mon-Fri evenings, etc)</inlineHelpText>
        <label>Preferred Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Procare_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Procare Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <controllingField>Group_Member__c</controllingField>
            <picklistValues>
                <fullName>Reason 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Business_Site__c</fullName>
        <formula>Business_Site__r.Region__c</formula>
        <label>Region (Business Site)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseDate__c</fullName>
        <label>ResponseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Body Shop Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant New Car Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Parts Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Service Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Used Car Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodyshop Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodyshop Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bodyshop Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Executive</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SLX_ContactID__c</fullName>
        <inlineHelpText>populated post-initial install so not 100% accurate</inlineHelpText>
        <label>SLX_ContactID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <inlineHelpText>Only Sales users will be able to see and edit this field.  Service will not be able to see data entered into this field.</inlineHelpText>
        <label>Digital Sales Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Send_ROI_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send ROI Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_ID__c</fullName>
        <label>Small ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <label>Survey Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Date_Formula_Contact__c</fullName>
        <formula>Today () -  Most_Recent_CSI_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Date Formula - Contact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Comments__c</fullName>
        <label>Title Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Accountant / Bookkeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Principal / Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Writer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Policies_To_Approve__c</fullName>
        <inlineHelpText>Total number of policies the associate still needs to acknowledge.</inlineHelpText>
        <label>Total Policies To Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Policies__c</fullName>
        <inlineHelpText>Total number of policies the associate had assigned to them.</inlineHelpText>
        <label>Total Policies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VFP_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is only used for the Member List visualforce page.  No need to include on layouts.</description>
        <label>VFP Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_Reason_Code__c</fullName>
        <label>VIP Reason Code</label>
        <picklist>
            <controllingField>VIP__c</controllingField>
            <picklistValues>
                <fullName>High Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMA President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_Dev__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website Dev</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Websites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Websites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XCOM_member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check if associate is an xcom member</inlineHelpText>
        <label>XCOM member</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>